fix: add scroll buffer to card-front for better mobile scroll UX

--- a/src/components/PlayerCardFlippable.css
+++ b/src/components/PlayerCardFlippable.css
@@ -38,6 +38,12 @@
     flex-direction: column;
   }
 
+  .card-front::after {
+  content: '';
+  display: block;
+  height: 32px;
+}
+
   .card-front::-webkit-scrollbar {
     width: 6px;
   }
